--- a/index.html
+++ b/index.html
@@ -1,64 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet" 
-          href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    <title>Get yourself FriendsManager!</title>
+    <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+	<link type="text/css" rel="stylesheet" href="css/main.css">
     <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-      .container {
-        width: 960px;
-      }
-      p.lead {
-        padding-top: 15px;
-      }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
-      }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
-        text-align: center;
-      }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
-      }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="row navigation">
         <div class="span2 logo">
-          Logo
+          <!--Logo-->
         </div>
         <div class="span6 blank">
           Blank
         </div>
         <div class="span4 about">
-          About
+          Keep your relationships strong!
         </div>
       </div>
       <div class="row heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>FriendsManager</h1>
         </div>
       </div> 
      <div class="row subheading">
         <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
+          <p class="lead">Keep your relationships strong! Get by pre-order price</p>
         </div>
       </div>
       <div class="row pitch">
@@ -73,7 +43,7 @@
             Order
           </div>
           <div class="social">
-            Social
+            LIKE!
           </div>
         </div>
       </div>
@@ -93,10 +63,11 @@
         </div>
       </div>
       <div class="row footer">
-        <div class="span12">
-          Footer
+        <div class="span12 logo">
+          <!-- Footer -->
         </div>
       </div>
     </div>
-  </body>
-</html>
+  
+
+</body></html>
