--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
   .footer a {
 	color: #ccccff;
   }
+  
+  /* custom FM */
+  .orange{
+	color: #FEBE11;
+  }
     </style>
   </head>
   <body>
@@ -146,7 +151,7 @@
 
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i1333.photobucket.com/albums/w621/sinisa_rudan/friendsmanager/friendsmanager_logo_zps41664f68.jpg">
         </div>
         
         <div class="span5 actions">
@@ -157,17 +162,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                	<h3>1000</h3> <p>backers</p>
+                	<h3>1507</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                	<h3>$6000</h3> <p>of $10,000</p>
+                	<h3>$4500</h3> <p>of $7,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                	<h3>10</h3> <p>days left</p>
+                	<h3>16</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -202,21 +207,24 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i1333.photobucket.com/albums/w621/sinisa_rudan/friendsmanager/business-networking_zps13cdd273.jpg">
         </div>
         <div class="span5 copy">
           <p>
-            section1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+		  <H1><span class='orange'>How FriendsManager helps you?</span></H1>
+		  </p>
+		  <p>
+            You will never again loose contact with your friend, business partner of classmate.
+			Organize activities through shared interests.<BR/>
+			FriendsManager follows your activities based on your settings.
+		  </p>
+		  <p>
+			<B>Get FriendsManager Pro Acount through preorder!</B>
+		</p>
+		  <p>
+			<B>For each of your friends that preorders FriendsManager you get 10% discount!</B>
+			
+			
           </p>
         </div>
       </div>
@@ -224,21 +232,15 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            section2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            <B>Is usage free?</B><BR/>
+			Yes, it is and it will always be free. Nevertheless, Pro acount exists.
+            <BR/>
+            <B>Is my data available to other subjects?</B><BR/>                
+			No, you define the privacy of your data.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i1333.photobucket.com/albums/w621/sinisa_rudan/friendsmanager/friendsmanager_logo_zps41664f68.jpg">
         </div>
       </div> 
        
@@ -253,12 +255,13 @@
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse"
                  data-parent="#accordion2" href="#collapseOne">
-                What does FAQ stand for?
+                Accounts
               </a>
             </div>
             <div id="collapseOne" class="accordion-body collapse">
               <div class="accordion-inner">
-                Frequently Asked Question.
+                <B>Is usage free?</B><BR/>
+				Yes, it is and it will always be free. Nevertheless, Pro acount exists.
               </div>
             </div>
           </div>
@@ -266,12 +269,13 @@
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse"
                  data-parent="#accordion2" href="#collapseTwo">
-                What's a Frequently Asked Question?
+                Privacy
               </a>
             </div>
             <div id="collapseTwo" class="accordion-body collapse">
               <div class="accordion-inner">
-                A question which is commonly asked by users.
+                <B>Is my data available to other subjects?</B><BR/>
+				No, you define the privacy of your data
               </div>
             </div>
           </div>
